Add JDK 17 configuration check to Snowflake module
This is based on the functionality implemented in
starburstdata/starburst-enterprise@64faa2feb0.

(cherry-picked from commit: a379ee0468524f382b3ee8fc57f3c2a2cf4f790f)